kubernetes/apps/excalidraw/service.yml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: apps
  labels:
    app.kubernetes.io/name: excalidraw
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: excalidraw
