kubernetes/apps/excalidraw/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`draw.woitzik.dev`)
    kind: Rule
    middlewares: [{name: crowdsec-bouncer}, {name: authelia}]
    services: [{name: excalidraw, port: 80}]
